@@ -1,5 +1,6 @@
-<{includeq file='db:wgteams_breadcrumbs.tpl'}>
+<{if $showbreadcrumbs != ''}>
+    <{includeq file='db:wgteams_breadcrumbs.tpl'}>
+<{/if}>
 <{if $ads != ''}>
 	<div class="center"><{$ads}></div>
-
 <{/if}>
