@@ -1,5 +1,10 @@
 
 ==============================================================
+Change Log for wgTeams - 2016/02/23 16:08:02 Version 1.06
+==============================================================
+added config 'showbreadcrumbs' (goffy)
+
+==============================================================
 Change Log for wgTeams - 2016/01/31 16:08:02 Version 1.05
 ==============================================================
 added config 'show labels' (goffy)
